Changed classes to classy

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="jumbotron cloak text-center">
             <h1 class="top-icon"><img src="img/g39.png"></h1>
             <h1>Zalli Fashion</h1>
-            <h3>Classes and trendy styles</h3>
+            <h3>Classy and trendy styles</h3>
             <p ><i>You can take a tour around</i></p>
         </div>
     </section>
